# brain-system

./: .auto_commit_state.json  .bash_history  .bashrc  .claude.json  .claude.json.backup  .dockerignore  .env.example  .eslintrc.js  .gitconfig  .gitignore  .sync_manifest.json  BRAIN_MASTER.md  CLAUDE.md  Dockerfile  LAUNCH_SUMMARY.md  LICENSE  OBSIDIAN_SYNC_COMPLETE.md  QUICK_REFERENCE.md  README.md  SAKSHAM_INDEX.md  auto_commit.py  autosync_to_gdrive.sh  brain_core.sh  complete_integration_setup.md  create_people_entries.py  create_service_account.sh  create_symlinks.py  debug_search.py  decode_b64.py  docker-compose.yml  eed_system_files.b64  enhanced_brain_commands.sh  enhanced_xml_brain.py  ever_expanding_dataset_system_design.md  extract_photo_goals.py  final_analysis.md  final_test.py  gdrive_manager.sh  gmail_easy_setup.sh  gmail_setup_guide.md  (+28 more)
.claude/: .credentials.json  settings.json
.flow-nexus/: .key
.gemini/: installation_id  oauth_creds.json
.ssh/: authorized_keys
api-system/: Dockerfile  README.md  docker-compose.yml  package.json
cli/: README.md  brain.py  setup_gmail.sh  setup_gmail_simple.sh  tpu_search.py  verify_interviews.py
config/: mcp-brain-system.json
mcp-servers/gmail-arcade/: README.md  get_auth_urls.py  production_test.py  pyproject.toml  requirements.txt  setup_gmail_auth.py  validate_config.py
mcp-servers/gmail-arcade/src/gmail_arcade_mcp/: __init__.py  __main__.py  config.py  gmail_tools.py  server.py  utils.py
mcp-servers/gmail-arcade/tests/: __init__.py  test_gmail_tools.py  test_integration.py  test_server.py
(+203 files in other folders)
